--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 source env/bin/activate
-export APP_SETTINGS="config.DevelopmentConfig"
+export APP_SETTINGS="config.StagingConfig"
 export DATABASE_URL="postgresql://localhost/wordcount_dev"
