adds logging module, more spec, and a fix for the db error

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+#!/bin/bash
+
 source env/bin/activate
 export APP_SETTINGS="config.DevelopmentConfig"
 export DATABASE_URL="postgresql://localhost/wordcount_dev"
+export DYLD_FALLBACK_LIBRARY_PATH=$HOME/anaconda/lib/:$DYLD_FALLBACK_LIBRARY_PATH
